--- a/db_docker/docker-compose.yml
+++ b/db_docker/docker-compose.yml
@@ -7,21 +7,5 @@ services:
       - '8001:8001' #RedisInsight
     volumes:
       - ./data/:/data
-    env_file:
-      - ./esc_db/env.db
-  dbadmin:
-
-   depends_on:
-     - dbserver.esc
-   restart: always
-   ports:
-     - target: 8080
-       published: 8081
-       protocol: tcp
-       mode: host
-
-
-
-
-      
-  
+#    env_file:
+#      - ./esc_db/env.db
